scheduler/static/scheduler/css/mobile.less
/* ... */
/*** Search result block ***/
.result-display-container{ padding:0px;

    .waiting { width: 100%; margin-top: 40px; font-size: 45px; text-align: center; }

    .search-failed { margin-top: 40px;
        i {
            font-size: 26px;
            padding-right: 6px;
        }
    }

    .no-future-meeting-times { margin-top: 40px; font-size: larger; }

	.room-header{
		background-color: @brand-litegold;
		margin:20px 0px;
		padding: 4px 10px;
		h3 {
			font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
			color:@gray-dark;
			margin-top:5px;
			margin-bottom: 0px;
			font-weight: 400;
			letter-spacing: 0;
			text-transform: none;
			}

		.record-status-enable {
			color:@green;
			font-size: small;
			display: inline-block;
			margin-left: 10px;

			}
		.record-status-disable {
			color:@red;
			font-size: small;
			display: inline-block;
			margin-left: 10px;
			.fa-warning {
				color:#e9e20a;
				}
			}
		.other-links {
			display: inline-block;
			padding-top: 10px;

			.xlist-icon{
			padding-right: 2px;
			}

			.external-links{
				float: right;
			}
			.header-link-span {
				padding-left: 2px;
				padding-right: 5px;
				margin-top: -35px;
				margin-right: 5px;
				a.header-link {
					text-decoration: none;
					&:hover, &:focus{
						text-decoration: underline;

					}
				}

			}
		}
		.course-name {
			display: inline-block;
		}
	}//.room-header

	.result-list-container {
		h4 { color:@brand-purple; font-weight: 500; display: inline-block;
            small {
                a, span { padding-left: 8px; }
            }
        }
        .list-group {
            .list-group-item {
                line-height: 35px;
            }
        }
        .room-list { list-style: none; display: inline-block; margin: 0; padding: 0;
            li { display: inline; }
            li:after { content: ', '; }
            li:nth-last-child(2):after { content: ''; }
            li:last-child:before { content: ' and '; }
            li:last-child:after { content: ''; }
            li:only-of-type:before { content: ''; };
        }
        .result-header {
            min-height: 52px;
	        .fa-warning {
				color: @warning-yellow;
				margin-left: 5px;
				margin-right: -6px;
		    }
        }
		.batchswitch {
			display: inline-block;
			margin-right: 15px;
			margin-top: 5px;
            span.scheduled, span.unscheduled {
                display: none;
            }
            span.schedule-all {
                display: inline-block;
            }
			.record-all {
				width: 90px;
			}
	    }
        .scheduled {
            span.unscheduled, .recordable, .recording, .recorded {
                display: none;
            }
        }
        .unscheduled {
            span.scheduled, .recordable, .recording, .recorded {
                display: none;
            }
        }
        .can-record {
            span.recordable {
                display: inline-block;
            }
            span.schedule-all, span.unscheduled, span.scheduled, span.recording, span.recorded {
                display: none;
            }
        }
        .is_recording {
            span.recording {
                display: inline-block;
                i { color: red };
            }
            span.schedule-all, span.unscheduled, span.scheduled, span.recordable, span.recorded {
                display: none;
            }
            .dropdown-menu {
                li:last-child {
                    display: none;
                }
            }
        }
        .is_recorded {
            span.recorded { color: black; }
            span.schedule-all, span.unscheduled, span.scheduled, span.recordable, span.recording {
                display: none;
            }
        }
		.result-list-chunk{ //margin-top: 20px;
			ol {margin:0; padding-left:0; list-style: none; }
			.result-row-date { padding-left:0px; display:inline-block; width: 40px; }
			.result-row-day{ padding-left:0px; margin-right:5px; display:inline-block; width: 25px; }
			.result-row-time{ padding-left:0px; display:inline-block; width: 110px; }
			.result-row-event{ padding-left:0px; font-weight: 400; display:inline-block; }
				.result-row-contact{
				padding-left:10px;
				display:inline-block;
				width: 160px;
				white-space: nowrap;
				text-overflow: ellipsis;
				vertical-align: top;
				overflow: hidden;
				}


			.result-row-switchbtn{ padding-left:10px;
                a { margin-right: 8px; color: black; }
            }
		}// .result-list-chunk
		.record-status-enable {
			color:@green;
			font-size: small;
			display: inline-block;
			margin-left: 10px;
			}
		.record-status-disable {
			color:@red;
			font-size: small;
			display: inline-block;
			margin-left: 10px;
        }
	}//.result-list-container



}


//Styling for Spinners

//Rotating Refresh Icon Class
.glyphicon-refresh-animate {
   -webkit-animation-name: rotateThis;
   -webkit-animation-duration: 0.75s;
   -webkit-animation-iteration-count: infinite;
   -webkit-animation-timing-function: linear;
}

//Webkit Keyframes for rotating icon
@-webkit-keyframes "rotateThis" {
 from {
        -webkit-transform: rotate( 0deg );
    }
 to  {
        -webkit-transform: rotate( 360deg );
    }
}


.spinner {
  display: inline-block;
  opacity: 0;
  width: 0;

  -webkit-transition: opacity 0.25s, width 0.25s;
  -moz-transition: opacity 0.25s, width 0.25s;
  -o-transition: opacity 0.25s, width 0.25s;
  transition: opacity 0.25s, width 0.25s;
}

.spinner.active {
	opacity: 1;
	width: auto;
}


.has-spinner.active {
  opacity: 1;
}

.has-spinner.active .spinner {
  opacity: 1;
  width: auto; /* This doesn't work, just fix for unkown width elements */
  color: grey;
  text-align: center;
}

.has-spinner.active .text {
  width: 0; /* This doesn't work, just fix for unkown width elements */
  content: '';
}

.btn-success.has-spinner.active .spinner{
	color: white;
}

//Styling for spinner --End


.text {
	opacity: 1;
	width: auto;
	content: 'Schedule';
}
/* ... */

